samples/_failures_safe/1760959715_5f733a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6db3311c.c: In function ‘generate_report’:
./samples/SAFE/__tmp_6db3311c.c:137:13: error: expected expression at end of input
  137 |             printf("%s [%s] - %s\n",
      |             ^~~~~~
./samples/SAFE/__tmp_6db3311c.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6db3311c.c:137:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6db3311c.c:137:13: error: expected declaration or statement at end of input
